# tDM

./: .gitignore  README.md  client.py  config.example.yaml  config.py  daemon.py  logger_config.py  models.py  pyproject.toml  requirements.txt  server.py
client/: go.mod  go.sum
client/cmd/client/: main.go
client/internal/ui/: table.go  utils.go
go_client/: build.sh  go.mod
go_client/cmd/client/: main.go
go_client/internal/api/: client.go
go_client/internal/ui/: table.go
server/: go.mod  go.sum  main.py  pyproject.toml  ruff.toml
server/cmd/server/: main.go
server/pkg/api/: handlers.go
server/pkg/core/: config.go  models.go
server/pkg/daemon/: aria2.go  daemon.go  work_processor.go
server/tdm/api/: routes.py
server/tdm/core/: config.py
server/tdm/daemon/: daemon.py
server_go/: go.mod
server_go/cmd/server/: main.go
server_go/pkg/api/: handlers.go
server_go/pkg/core/: config.go  models.go
server_go/pkg/daemon/: aria2.go  daemon.go  work_processor.go
