[project]
name = "tdm"
version = "0.1.0"
description = "tDM: A terminal based download manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tdm = "tdm.main:main"

# [tool.setuptools]
# packages = ["tdm"]
